# order-book

./: AGENTS.md  BENCHMARK_GUIDE.md  CMakeLists.txt  README.md
benchmarks/fixtures/: benchmark_helpers.cpp  benchmark_helpers.h  scenario_generators.cpp  scenario_generators.h
benchmarks/integration/: engine_scenarios_bench.cpp
benchmarks/micro/: cancellation_bench.cpp  insertion_bench.cpp
benchmarks/results/info/micro/: micro.json
benchmarks/results/none/micro/: micro.json
include/core/: book.h  order.h  types.h
include/engine/: matching_engine.h
include/utils/: logger.h
src/: main.cpp
src/core/: book.cpp  order.cpp
src/engine/: matching_engine.cpp
src/utils/: logger.cpp
tests/core/: bookTest.cpp
tests/engine/: matchingEngineTest.cpp
tests/integration/: endToEndTest.cpp
